--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-/*   
+/*
  * Template Name: PrettyDocs - Bootstrap 4 Template for documentations
  * Version: 2.0
  * Author: Xiaoying Riley
@@ -231,7 +231,7 @@ select {
 .header {
   background: #494d55;
   color: rgba(255, 255, 255, 0.85);
-  border-top: 5px solid #40babd;
+  border-top: 2px solid #40babd;
   padding: 30px 0;
 }
 
@@ -240,7 +240,6 @@ select {
 }
 
 .branding {
-  text-transform: uppercase;
   margin-bottom: 10px;
 }
 
@@ -305,7 +304,7 @@ select {
 }
 
 .body-red .branding .icon {
-  color: #f77b6b;
+  color: #ff6961;
 }
 
 .body-pink .branding .icon {
@@ -842,6 +841,7 @@ select {
 
 .doc-menu {
   list-style: none;
+  padding-top: 30px;
 }
 
 .doc-menu .nav-link {
@@ -961,7 +961,7 @@ select {
   top: 15px;
 }
 
-.affix, 
+.affix,
 .affix-bottom {
   width: 230px;
 }
@@ -1149,7 +1149,6 @@ select {
 }
 
 .landing-page .branding {
-  text-transform: uppercase;
   margin-bottom: 20px;
 }
 
