--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,6 +36,14 @@ html, body {
   height: 50px;
 }
 
+.full-width {
+  width: 100%;
+}
+
+.height-500 {
+  height: 500px; 
+}
+
 p {
   line-height: 1.5;
 }
