--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,39 @@
  * Website: http://themes.3rdwavemedia.com/
 */
 /* ======= Base ======= */
+
+
+ol ul li{
+  list-style-type: disc;
+}
+}
+ol {
+  margin:0 0 1.5em;
+  padding:0;
+}
+
+ol>li {
+  margin:0;
+  padding:0 0 0 2em;
+  text-indent:-2em;
+  list-style-type: none;
+}
+
+ol>li:before {
+  display:inline-block;
+  width:1.5em;
+  padding-right:0.5em;
+  font-weight:bold;
+  text-align:right;
+  counter-increment: item;
+  content: counter(item) ".";
+}
+
+
+ol:first-of-type {
+  counter-reset: item -1;
+}
+
 body {
   font-family: 'Open Sans', arial, sans-serif;
   color: #494d55;
